# tram_monitor_ekb

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_route_geometry_cache.py
backend/app/: config.py  main.py
backend/app/api/: diagnostics.py  routes.py  stops.py  vehicles.py  ws.py
backend/app/core/: broadcaster.py  eta_calculator.py  ettu_client.py  route_matcher.py  scheduler.py  stop_detector.py  vehicle_tracker.py
backend/app/models/: tables.py
backend/app/schemas/: route.py  vehicle.py
backend/tests/: test_eta_calculator.py  test_route_matcher.py  test_stop_detector.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: leaflet-slideto.d.ts  main.ts
frontend/src/map/: map-controller.ts  route-layer.ts  stop-layer.ts  vehicle-layer.ts
frontend/src/services/: api-client.ts  state.ts  ws-client.ts
frontend/src/styles/: main.css
frontend/src/ui/: route-filter.ts  station-detail.ts  vehicle-list.ts
